added airflow container in docker compose created a job-market-dag made changes accordingly in other files

--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,13 @@ __marimo__/
 
 #folders
 datasets/
+logs/
+plugins/
+
+# Airflow runtime files
+airflow.cfg
+airflow-webserver.pid
+logs/
+__pycache__/
+*.pyc
+*.pid
