--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,6 +41,7 @@ services:
       - ./logs:/opt/airflow/logs
       - ./plugins:/opt/airflow/plugins
       - .:/opt/airflow
+      - ./requirements.txt:/opt/airflow/requirements.txt
     ports:
       - 8080:8080
     networks:
@@ -48,8 +49,14 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - capabilities: [gpu]
     command: >
       bash -c "
+      pip install --no-cache-dir -r /opt/airflow/requirements.txt &&
       airflow db init &&
       airflow users create --username admin --firstname Admin --lastname User --role Admin --email admin@example.com --password admin &&
       (airflow scheduler &) &&
