--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -62,6 +62,28 @@ services:
       (airflow scheduler &) &&
       airflow webserver
       "
+
+  streamlit:
+    image: python
+    container_name: job-market-dashboard
+    env_file:
+      - .env
+    working_dir: /app
+    volumes:
+      - .:/app
+    ports:
+      - 8501:8501
+    networks:
+      - job-market-network
+    depends_on:
+      postgres:
+        condition: service_healthy
+    command: >
+      bash -c "
+      pip install streamlit pandas sqlalchemy psycopg2-binary plotly &&
+      streamlit run dashboard.py --server.address=0.0.0.0
+      "
+
 volumes:
   postgres_data:
 
