All the code has been change to create table and load the data into cloud neon db

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,34 +1,36 @@
+version: "3.8"
 services:
+  # Dedicated Postgres container for Airflow metadata
   postgres:
-    image: postgres:latest
-    container_name: job-market-db
-    env_file:
-      - .env
+    image: postgres:13
+    container_name: airflow-metadata-db
     environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
-    ports:
-      - 5430:5432
+      POSTGRES_DB: airflow_meta
+      POSTGRES_USER: airflow
+      POSTGRES_PASSWORD: airflow
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - job-market-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
+      test: ["CMD-SHELL", "pg_isready -U airflow"]
       interval: 5s
       timeout: 5s
       retries: 5
 
+  # Airflow service
   airflow:
     image: apache/airflow:2.8.3
     container_name: job-market-airflow
     env_file:
       - .env
+    depends_on:
+      postgres:
+        condition: service_healthy
     environment:
       AIRFLOW__CORE__EXECUTOR: LocalExecutor
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:5432/${DB_NAME}
-      AIRFLOW__CORE__FERNET_KEY: ""
+      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres:5432/airflow_meta
+      AIRFLOW__CORE__FERNET_KEY: "" # Generate one with: fernet_key = Fernet.generate_key()
       AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: "true"
       AIRFLOW__CORE__LOAD_EXAMPLES: "false"
       # Project-specific variables
@@ -46,9 +48,6 @@ services:
       - 8080:8080
     networks:
       - job-market-network
-    depends_on:
-      postgres:
-        condition: service_healthy
     deploy:
       resources:
         reservations:
@@ -62,6 +61,11 @@ services:
       (airflow scheduler &) &&
       airflow webserver
       "
+    healthcheck:
+      test: ["CMD", "curl", "--fail", "http://localhost:8080/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   streamlit:
     image: python
@@ -80,12 +84,13 @@ services:
         condition: service_healthy
     command: >
       bash -c "
-      pip install streamlit pandas sqlalchemy psycopg2-binary plotly &&
+      pip install streamlit pandas sqlalchemy psycopg2-binary plotly python-dotenv &&
       streamlit run dashboard.py --server.address=0.0.0.0
       "
 
-volumes:
-  postgres_data:
-
 networks:
   job-market-network:
+    driver: bridge
+
+volumes:
+  postgres_data:
